# research-stuff

./: .gitignore  .gitmodules  README.md  flake.nix  pyrtl.nix  todo.org
abstract/: abstract.typ  actual_abstract.typ
egg-rewrite-exp/: .gitignore  Cargo.toml  counter.v  counter.ys  exp.egg  justfile  notes.norg  synth-half-adder.v  synth.v
egg-rewrite-exp/common/: lakeroad_rewrites.egg
egg-rewrite-exp/egglog_src/: lakeroad.egg  lakeroad_rewrites.egg  lang.egg  optimize.egg  rewrite.egg  typing.egg
egg-rewrite-exp/full-adder/: full-adder.ys  full_adder.v  half_adder.v  synth.v
egg-rewrite-exp/half-adder/: half-adder.egg  half-adder.ys
egg-rewrite-exp/monday-presentation/: presentation.typ  slide.typ
egg-rewrite-exp/scripts/: yosys.py
egg-rewrite-exp/src/: main.rs
egg-rewrite-exp/tests/ISCAS/4bitALU/: half-adder.ys  synth.v
egg-rewrite-exp/tests/experiments/: alu.egg  alu.sv  decoder.egg  decoder.sv  mycells.v  synth.v  test.ys  top.egg  top.sv
egg-rewrite-exp/tests/full-adder/: .#full_adder.egg  full-adder-btor.ys  full-adder.ys  full_adder.btor  full_adder.egg  full_adder.ys  half-adder.egg  half-adder.v  scratch.egg  synth.v
egg-rewrite-exp/tests/gate_finding/: XOR.egg  full_adder.v  full_synth.v  mycells.v  myxor_synth.v  out.v  synth.v  techmap.v  test.v  test.ys  test1.egg  test1.v  test1_synth.v  xor.v  xor.ys  xor_synth.v
egg-rewrite-exp/tests/half-adder/: half-adder.egg  half-adder.ys
rust-app/: Cargo.toml  comment-anno.tg  hello.dot
rust-app/src/: graph.rs  main.rs
unpickle/src/: main.rs
yo-nick/: Cargo.toml
yo-nick/configs/: config.json  exp1.ncl  exp1.ryans  lib.ncl  schema.ncl  test.ncl
yo-nick/experiments/: alu.egg  config.json  synth.v
yo-nick/src/: cli.rs  main.rs
yosys-stuff/: counter.ys  half-adder.v  half-adder.ys  mycells.v  synth-half-adder.btor  synth.blif
