[package]
name = "egg-rewrite-exp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
# Switch to dev version (github version) of egglog
egglog = { git = "https://github.com/egraphs-good/egglog.git" }
env_logger = "0.10.0"
log = "0.4.20"
regex = "1.10.2"
