[package]
name = "egg-rewrite-exp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
# Switch to dev version (github version) of egglog
egglog = { git = "https://github.com/egraphs-good/egglog", rev = "73a76dc9228ce24291b3e41bbbca14eddd10cd5e" }
env_logger = "0.10.0"
regex = "1.10.2"
ryan = "0.2.3"
serde = "1.0.196"
serde_json = "1.0.113"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
