[package]
name = "nickel-exp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="4.4.4", features=["derive"] }
clap-stdin = "0.2.1"
dot-writer = "0.1.3"
nickel-lang-core = { git = "https://github.com/tweag/nickel.git" }
recursion = "0.5.1"
sv-parser = "0.13.1"
tree-sitter = "0.20.10"
tree-sitter-graph = "0.11.0"
tree-sitter-python = "0.20.4"
tree-sitter-verilog = { git="https://github.com/tree-sitter/tree-sitter-verilog.git" }
